fixed shift screen size 768px

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -49,7 +49,7 @@ p {
 }
 
 @font-face {
-  font-family: "Bebas Neue";
+  font-family: "Bebas Neue", Impact, sans-serif;
   src: url("/fonts/Bebas_Neue/BebasNeue-Regular.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
@@ -2164,6 +2164,20 @@ figcaption {
     object-position: bottom;
     object-fit: cover;
     aspect-ratio: 2.278 / 1;
+  }
+
+  .nav-icon-container {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    max-width: 100vw;
+    height: auto;
+    min-height: 1vh;
+    align-items: center;
+    justify-content: right;
+    flex: 1;
+    padding: 0;
+    gap: 1em;
   }
 
   .logo-container {
